@@ -117,7 +117,10 @@ unpack-stamp:
 
 	touch unpack-stamp
 
-build: build-stamp
+build: build-arch build-indep
+build-arch: build-stamp
+build-indep: build-stamp
+
 build-stamp: unpack-stamp
 	dh_testdir
 
